# tradeX

./: CLAUDE.md  CMakeLists.txt  README.md  git-commands.txt
.claude/: settings.json  settings.local.json
.claude/agents/: full-pipeline.md
.claude/commands/: check-all.md
.claude/skills/: boundary-test.md  ci-test.md  code-review.md  compatibility-test.md  design-review.md  emergency.md  functional-test.md  integration-test.md  monitor.md  online-assessment.md  performance-test.md  pre-commit-check.md  release-execute.md  release-plan.md  release-report.md  spec-review.md  test-report.md  unit-test.md
admin/: CMakeLists.txt
admin/include/tradex/admin/: admin.h
admin/src/: admin.cpp
algo/: CMakeLists.txt
algo/include/tradex/algo/: algo.h
algo/src/: algo.cpp
auth/: CMakeLists.txt
auth/include/tradex/auth/: auth.h
auth/src/: auth.cpp
cli/: CMakeLists.txt  cli_commands.cpp  cli_main.cpp
config/: tradex.json
dao/: CMakeLists.txt
dao/include/tradex/dao/: base_dao.h  connection_pool.h
dao/src/: connection_pool.cpp
framework/: CMakeLists.txt
framework/include/tradex/framework/: config.h  log.h  singleton.h  status.h  thread_pool.h  version.h
framework/src/: config.cpp  log.cpp  status.cpp  thread_pool.cpp
gateway/: CMakeLists.txt
gateway/include/tradex/gateway/: gateway.h
gateway/src/: gateway.cpp
market/: CMakeLists.txt
market/include/tradex/market/: market.h
market/src/: market.cpp
net/: CMakeLists.txt  net_client.cpp  net_server.cpp  protocol.cpp
net/include/tradex/net/: net.h
order/: CMakeLists.txt
order/include/tradex/order/: order.h  order_service.h
order/src/: order.cpp  order_service.cpp
risk/: CMakeLists.txt
risk/include/tradex/risk/: risk.h
risk/src/: risk.cpp
src/: main.cpp
strategy/: CMakeLists.txt
strategy/include/tradex/strategy/: strategy.h
strategy/src/: strategy.cpp
task/: CMakeLists.txt
task/include/tradex/task/: task.h
task/src/: task.cpp
trade/: CMakeLists.txt
trade/include/tradex/trade/: trade.h  trade_service.h
trade/src/: trade.cpp
unit_test/: CMakeLists.txt  test_config.cpp  test_framework.h  test_main.cpp  test_order.cpp
